<resources>
    <string name="app_name">HOT Dog</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_streaming">Streaming</string>
    <string name="nav_page">Mypage</string>
    <string name="nav_vod">Vod</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_blog">MyBlog</string>
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Streaming</item>
        <item>Vod</item>
        <item>Mypage</item>
        <item>Settings</item>
    </string-array>
    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="secure_text">IP 주소와 2차 비밀번호 등록하세요.</string>
    <string name="streamSec_pass">스트리밍 접속</string>
    <string name="secure_ip">IP 주소</string>
    <string name="secure_ipErr">IP 주소를 입력하세요.</string>
    <string name="secure_pass">2차 비밀번호</string>
    <string name="secure_passchk">2차 비밀번호 확인</string>
    <string name="secure_passErr">비밀번호가 일치하지 않습니다.</string>
    <string name="secure_passErr1">4자리 이상 입력하세요</string>
    <string name="secure_register">등록</string>
    <string name="secure_login">접속</string>
    <string name="appStartScreen_title">HotDog\nbuy petcam !</string>
    <string name="appTuto1_top">HOT Dog</string>
    <string name="appTuto1_title">환영합니다</string>
    <string name="appTuto1_content">HOT Dog 캠으로 언제 어디서든\nHD급 영상으로 확인하세요!</string>
    <string name="appTuto1_repeatCheck">다시 보지 않기</string>
    <string name="appTuto1_repeatButton">시작하기</string>
    <string name="appTuto2_top">HOT Dog</string>
    <string name="appTuto2_title">양방향 워키토키</string>
    <string name="appTuto2_content">카메라에 마이크와 스피커를 통해\n보고 들으며 대화하실 수 있어요!</string>
    <string name="appTuto2_repeatCheck">다시 보지 않기</string>
    <string name="appTuto2_repeatButton">시작하기</string>
    <string name="appTuto3_top">HOT Dog</string>
    <string name="appTuto3_title">실시간 감지 + 영상 자동저장</string>
    <string name="appTuto3_content">움직임 감지뿐 아니라 소리 감지까지\n우리집 강아지 지킴이</string>
    <string name="appTuto3_repeatCheck">다시 보지 않기</string>
    <string name="appTuto3_repeatButton">시작하기</string>
    <string name="loginEm_title">HoT Dog</string>
    <string name="loginEm_emailHint">이메일 입력</string>
    <string name="loginEm_emailError">이메일을 다시 확인하세요</string>
    <string name="loginEm_emailButton">next</string>
    <string name="loginEm_signup">sign up</string>
    <string name="loginEm_autologin"> 자동 로그인</string>
    <string name="loginFw_title">HOT Dog </string>
    <string name="loginFw_pwHint">비밀번호 입력</string>
    <string name="loginFw_pwError">비밀번호를 다시 확인하세요</string>
    <string name="loginFw_loginButton">LOGIN</string>
    <string name="loginFw_findButton">FIND</string>
    <string name="loginFw_signup">sign up</string>
    <string name="findPw_title">HOT Dog </string>
    <string name="findPw_keyButton">인증키 발송</string>
    <string name="findPw_hint">인증키 입력</string>
    <string name="findPw_error">인증키가 올바르지 않습니다.</string>
    <string name="findPw_okButton">확인</string>
    <string name="resetPw_title">HOT Dog </string>
    <string name="resetPw_subTitle">비밀번호 재설정</string>
    <string name="resetPw_hint">새로운 비밀번호 입력</string>
    <string name="resetPw_checkHint">비밀번호 확인</string>
    <string name="resetPw_error">올바르지 않은 비밀번호입니다.</string>
    <string name="resetPw_checkError">비밀번호가 일치하지 않습니다.</string>
    <string name="resetPw_nextButton">확인</string>
    <string name="loginOk_topLine">Hello</string>
    <string name="loginOk_middleLine">Bae SeungJin</string>
    <string name="loginOk_bottomLine">!</string>
    <string name="joinCheck_title">HOT Dog</string>
    <string name="joinCheck_firstContent">가\n입\n약\n관\n가\n입\n약\n관</string>
    <string name="joinCheck_firstCheck">동의합니다.</string>
    <string name="joinCheck_secondContent">가\n입\n약\n관\n가\n입\n약\n관</string>
    <string name="joinCheck_secondCheck">동의합니다.</string>
    <string name="joinCheck_checkError">가입약관에 대한 안내 모두 동의해주세요.</string>
    <string name="joinCheck_continue">continue</string>
    <string name="joinInfo_title">HOT Dog</string>
    <string name="joinInfo_subTitle">계정 만들기</string>
    <string name="joinInfo_nameHint">이름</string>
    <string name="joinInfo_nameError">이름을 입력해주세요.</string>
    <string name="joinInfo_nickHint">닉네임</string>
    <string name="joinInfo_nickError">존재하는 닉네임입니다.</string>
    <string name="joinInfo_nickError2">2글자 이상 입력하세요</string>
    <string name="joinInfo_emailHint">이메일</string>
    <string name="joinInfo_emailError">존재하는 이메일입니다.</string>
    <string name="joinInfo_emailError2">이메일 형식이 옳바르지 않습니다.</string>
    <string name="joinInfo_pwHint">비밀번호 만들기</string>
    <string name="joinInfo_pwCheckHint">비밀번호 확인</string>
    <string name="joinInfo_pwError">8자 이상 입력하세요.</string>
    <string name="joinInfo_pwCheckError">비밀번호가 일치하지 않습니다.</string>
    <string name="joinInfo_okButton">등록</string>
    <string name="joinOk_topLine">Welcome to</string>
    <string name="joinOk_middleLine">HOT - DOG</string>
    <string name="joinOk_bottomLine">!</string>
    <string name="main_dayLeft">386</string>
    <string name="main_dayRight">day</string>
    <string name="main_nameLeft">with\t</string>
    <string name="main_nameRight">뽀숑이</string>
    <string name="main_streamButton">뽀숑이보기</string>
    <string name="menu"></string>
    <string name="mainTuto_openMenu">메뉴열기</string>
    <string name="mainTuto_goRight">오른쪽으로 미세요</string>
    <string name="mainTuto_setPicture">메뉴 -"'"My Page"'"에서 설정</string>
    <string name="mainTuto_streaming">실시간 영상 시청</string>
    <string name="menuTuto"></string>
    <string name="streamSafePw_title">보안 비밀번호를 설정해주세요</string>
    <string name="streamSafePw_raspNumberHint">핫도그 기기 번호 입력</string>
    <string name="streamSafePw_raspNumbetError">기기번호가 올바르지 않습니다.</string>
    <string name="streamSafePw_raspPwHint">설정할 보안 비밀번호 입력</string>
    <string name="streamSafePw_raspPwCheckHint">보안 비밀번호 확인</string>
    <string name="streamSafePw_raspPwError">올바르지 않은 비밀번호입니다.</string>
    <string name="streamSafePw_raspPwCheckError">비밀번호가 일치하지 않습니다.</string>
    <string name="streamSafePw_okButton">확인</string>
    <string name="streamSafePwOk_topLine">보안설정</string>
    <string name="streamSafePwOk_middleLine">완료</string>
    <string name="streamSafePwOk_bottomLine">!</string>
    <string name="streamLogin_title">보안 비밀번호를 입력하세요</string>
    <string name="streamLogin_hint">보안 비밀번호 입력</string>
    <string name="streamLogin_Error">보안 비밀번호가 올바르지 않습니다.</string>
    <string name="streamLogin_okButton">확인</string>
    <string name="streamTuto_screen">영상출력화면</string>
    <string name="streamTuto_recording">녹화버튼 클릭시 녹화시작</string>
    <string name="streamTuto_control">카메라 조작</string>
    <string name="streamTuto_mic">버튼을 누르고있는 동안만 음성전달</string>
    <string name="streamTuto_never">다시 보지 않기</string>
    <string name="streamMain"></string>
    <string name="mypageMain_user">회원정보 수정</string>
    <string name="mypageMain_pet">애완견정보 수정</string>
    <string name="mypageMain_rasp">기기정보 수정</string>
    <string name="mypageMain_logout">로그아웃</string>
    <string name="mypageProfile_pictureTitle">사진등록</string>
    <string name="mypageProfile_findButton">사진 업로드</string>
    <string name="mypageProfile_enrollButton">등록</string>
    <string name="mypageProfile_userTitle">개인정보 수정</string>
    <string name="mypageProfile_name">배승진</string>
    <string name="mypageProfile_email">raspberrypi@gmail.com</string>
    <string name="mypageProfile_nickHint">라즈베리파이</string>
    <string name="mypageProfile_nickError">존재하는 닉네임입니다.</string>
    <string name="mypageProfile_nickError2">닉네임 두글자 이상</string>
    <string name="mypageProfile_nowPwHint">현재 비밀번호 입력</string>
    <string name="mypageProfile_nowPwError">현재 비밀번호가 올바르지 않습니다.</string>
    <string name="mypageProfile_wishPwHint">변경할 비밀번호 입력</string>
    <string name="mypageProfile_wishPwCheckHint">비밀번호 확인</string>
    <string name="mypageProfile_wishPwError">변경하실 비밀번호가 올바르지 않습니다.</string>
    <string name="mypageProfile_wishPwCheckError">비밀번호가 일치하지 않습니다.</string>
    <string name="mypageProfile_userButton">확인</string>
    <string name="mypageProfile_userDeleteTitle">회원탈퇴</string>
    <string name="mypageProfile_userDeleteButton">탈퇴</string>
    <string name="mypagePet_pictureTitle">사진등록</string>
    <string name="mypagePet_findButton">사진 업로드</string>
    <string name="mypagePet_enrollButton">등록</string>
    <string name="mypagePet_petTitle">애완동물정보 수정</string>
    <string name="mypagePet_petInfo">애완동물 소개</string>
    <string name="mypagePet_petage">생년월일</string>
    <string name="mypagePet_petagehint">생년월일</string>
    <string name="mypagePet_name">이름</string>
    <string name="mypagePet_nameHint">이름을 입력해주세요!</string>
    <string name="mypagePet_infoHint">소개해주세요</string>
    <string name="mypagePet_nameError">이름이 입력되지 않았습니다.</string>
    <string name="mypagePet_gender">성별</string>
    <string name="mypagePet_togetherTitle">함께한날</string>
    <string name="mypagePet_togetherDay">2017 / 01 / 13</string>
    <string name="mypagePet_okButton">수정</string>
    <string name="mypagePet_cancelButton">취소</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="btn_display">Display</string>
    <string name="mypageRaspMain_number">ABC1234</string>
    <string name="mypageRaspMain_changeRaspPw">보안 비밀번호 변경</string>
    <string name="mypageRaspMain_changeRaspNum">등록기기 변경</string>
    <string name="mypageRaspMain_dropRasp">등록기기 해제</string>
    <string name="mypageRaspLogin_title">보안 비밀번호를 입력해주세요.</string>
    <string name="mypageRaspLogin_raspPwHint">보안 비밀번호 입력</string>
    <string name="mypageRaspLogin_raspPwError">보안 비밀번호가 올바르지 않습니다.</string>
    <string name="mypageRaspLogin_okButton">확인</string>
    <string name="mypageRaspChangePw_title">보안 비밀번호를 설정해주세요</string>
    <string name="mypageRaspChangePw_raspPwHint">설정할 보안 비밀번호 입력</string>
    <string name="mypageRaspChangePw_raspPwCheckHint">보안 비밀번호 확인</string>
    <string name="mypageRaspChangePw_raspPwError">비밀번호가 올바르지 않습니다.</string>
    <string name="mypageRaspChangePw_raspPwCheckError">비밀번호가 일치하지 않습니다.</string>
    <string name="mypageRaspChangePw_okButton">확인</string>
    <string name="mypageRaspChangeRasp_title">보안 비밀번호를 설정해주세요.</string>
    <string name="mypageRaspChangeRasp_raspNumHint">핫도기 기기번호 입력</string>
    <string name="mypageRaspChangeRasp_raspNumError">기기번호가 올바르지 않습니다.</string>
    <string name="mypageRaspChangeRasp_raspPwHint">설정할 보안 비밀번호 입력</string>
    <string name="mypageRaspChangeRasp_raspPwCheckHint">보안 비밀번호 확인</string>
    <string name="mypageRaspChangeRasp_raspPwError">비밀번호가 올바르지 않습니다.</string>
    <string name="mypageRaspChangeRasp_raspPwCheckError">비밀번호가 일치하지 않습니다.</string>
    <string name="mypageRaspChangeRasp_okButton">확인</string>
    <string name="mypageRaspChangeOk_topLine">보안 설정</string>
    <string name="mypageRaspChangeOk_middleLine">완료</string>
    <string name="mypageRaspChangeOk_bottomLine">!</string>
    <string name="mypageRaspCancelOk">해지되었습니다</string>
    <string name="quality1">176x144, 30 fps, 170 Kbps</string>
    <string name="quality2">176x144, 30 fps, 200 Kbps</string>
    <string name="quality3">176x144, 30 fps, 250 Kbps</string>
    <string name="quality4">320x240, 30 fps, 250 Kbps</string>
    <string name="quality5">352x288, 30 fps, 300 Kbps</string>
    <string name="quality6">352x288, 30 fps, 400 Kbps</string>
    <string name="quality7">640x480, 30 fps, 600 Kbps</string>
</resources>