<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-100dp"
        android:layout_marginTop="15dp"
        android:text="@string/joinInfo_title"
        android:textColor="#2A78E4"
        android:textSize="18dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="@string/joinInfo_subTitle"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textviewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="13dp" />

    <EditText
        android:id="@+id/nickname"
        android:layout_width="225dp"
        android:layout_height="25dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/blackbox"
        android:hint="@string/joinInfo_nickHint"
        android:padding="5dp"
        android:textSize="13dp" />

    <TextView
        android:id="@+id/nicknameEr"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:text="@string/joinInfo_nickError"
        android:textColor="#f00"
        android:textSize="12dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/nicknameEr2"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:text="@string/joinInfo_nickError2"
        android:textColor="#f00"
        android:textSize="12dp"
        android:visibility="gone" />


    <EditText
        android:id="@+id/pass_word"
        android:layout_width="225dp"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/blackbox"
        android:hint="@string/joinInfo_pwHint"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textSize="13dp" />


    <TextView
        android:id="@+id/pass_wordEr"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:text="@string/joinInfo_pwError"
        android:textColor="#f00"
        android:textSize="12dp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/pass_word2"
        android:layout_width="225dp"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/blackbox"
        android:hint="@string/joinInfo_pwCheckHint"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textSize="13dp" />


    <TextView
        android:id="@+id/pass_word2Er"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:text="@string/joinInfo_pwCheckError"
        android:textColor="#f00"
        android:textSize="12dp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/buttonJoin"
            android:layout_width="60dp"
            android:layout_height="32dp"
            android:layout_marginRight="15dp"
            android:background="#0000"
            android:text="@string/joinInfo_okButton"
            android:textSize="20dp" />


    </LinearLayout>

</LinearLayout>