<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/streamSec_pass"
        android:textColor="#2A78E4"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textIpAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/secure_ip"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="15dp" />


    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/secure_pass"
        android:inputType="numberPassword"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/secPassErr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/secure_passErr"
        android:textColor="#f00"
        android:textSize="12dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/secPassErr1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/secure_passErr1"
        android:textColor="#f00"
        android:textSize="12dp"
        android:visibility="gone" />

    <Button
        android:id="@+id/buttonSeclogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secure_login" />

</LinearLayout>