<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="230dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mypageProfile_pictureTitle"
                android:textSize="15dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/profile_picture"
                android:layout_width="140dp"
                android:layout_height="185dp"
                android:layout_marginTop="20dp" />

            <Button
                android:id="@+id/search_picture"
                android:layout_width="70dp"
                android:layout_height="25dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/blackbox"
                android:text="@string/mypageProfile_findButton"
                android:textSize="13dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/mypageProfile_userTitle"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textview_email"
                android:layout_width="220dp"
                android:layout_height="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/blackbox"
                android:padding="5dp"
                android:text="@string/mypageProfile_email"
                android:textSize="13dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edittext_nickname"
                android:layout_width="220dp"
                android:layout_height="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/blackbox"
                android:inputType="textPersonName"
                android:padding="5dp"
                android:textSize="13dp" />

            <TextView
                android:id="@+id/edittext_nicknameEr2"
                android:layout_width="213dp"
                android:layout_height="wrap_content"
                android:text="@string/mypageProfile_nickError2"
                android:textColor="#f00"
                android:textSize="12dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/edittext_nicknameEr"
                android:layout_width="213dp"
                android:layout_height="wrap_content"
                android:text="@string/mypageProfile_nickError"
                android:textColor="#f00"
                android:textSize="12dp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/edittext_now_pass_word"
                android:layout_width="220dp"
                android:layout_height="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/blackbox"
                android:hint="@string/mypageProfile_nowPwHint"
                android:inputType="textPassword"
                android:padding="5dp"
                android:textSize="13dp" />

            <TextView
                android:id="@+id/edittext_now_pass_wordEr"
                android:layout_width="213dp"
                android:layout_height="wrap_content"
                android:text="@string/mypageProfile_nowPwError"
                android:textColor="#f00"
                android:textSize="12dp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/edittext_change_pass_word"
                android:layout_width="220dp"
                android:layout_height="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/blackbox"
                android:hint="@string/mypageProfile_wishPwHint"
                android:inputType="textPassword"
                android:padding="5dp"
                android:textSize="13dp" />


            <EditText
                android:id="@+id/edittext_change_pass_word2"
                android:layout_width="220dp"
                android:layout_height="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/blackbox"
                android:hint="@string/mypageProfile_wishPwCheckHint"
                android:inputType="textPassword"
                android:padding="5dp"
                android:textSize="13dp" />

            <TextView
                android:id="@+id/edittext_change_pass_wordEr"
                android:layout_width="213dp"
                android:layout_height="wrap_content"
                android:text="@string/mypageProfile_wishPwError"
                android:textColor="#f00"
                android:textSize="12dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/edittext_change_pass_word2Er"
                android:layout_width="213dp"
                android:layout_height="wrap_content"
                android:text="@string/mypageProfile_wishPwCheckError"
                android:textColor="#f00"
                android:textSize="12dp"
                android:visibility="gone" />

            <Button
                android:id="@+id/userUpdate"
                android:layout_width="70dp"
                android:layout_height="25dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/blackbox"
                android:text="@string/mypageProfile_userButton"
                android:textSize="13dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/mypageProfile_userDeleteTitle"
                android:textSize="15dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonQuit"
                android:layout_width="70dp"
                android:layout_height="25dp"
                android:layout_marginBottom="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/blackbox"
                android:text="@string/mypageProfile_userDeleteButton"
                android:textSize="13dp" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>
