<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <Button
        android:text="@string/mypageMain_user"
        android:layout_width="185dp"
        android:layout_height="41dp"
        android:background="@drawable/whitebox"
        android:layout_margin="10dp"
        android:id="@+id/buttonUpdateUser" />

    <Button
        android:text="@string/mypageMain_pet"
        android:layout_width="185dp"
        android:layout_height="41dp"
        android:background="@drawable/whitebox"
        android:layout_margin="10dp"
        android:id="@+id/buttonUpdatePet" />

    <Button
        android:text="@string/mypageMain_rasp"
        android:layout_width="185dp"
        android:layout_height="41dp"
        android:background="@drawable/whitebox"
        android:layout_margin="10dp"
        android:id="@+id/buttonUpdateDevice" />

    <Button
        android:text="@string/mypageMain_logout"
        android:layout_width="185dp"
        android:layout_height="41dp"
        android:background="@drawable/whitebox"
        android:layout_margin="10dp"
        android:id="@+id/buttonLogout" />

</LinearLayout>